frontend/src/styles/pages/_potential-causes.scss
body.potential-causes {
    $page: "potential-causes";

    section {

        p, li {
            color: #ADB2B6;
        }
    }

    .row {

        $icons: "brain" "neuron" "neuron-closeup" "dna" "people";
        @each $icon in $icons {
            &.#{$icon} .icon {
                @include responsive-icon("#{$page}/#{$icon}.png");
            }
        }
    }

    h4.heading--4 {
        @include mq("lg", "md") {
            font-size: 21px;
            line-height: 25px;
        }
        @include mq("sm") {
            font-size: 19px;
            line-height: 21px;
        }
    }

    .section--theories {
        background: #252F39;

        h1.heading--1 {
            margin-top: 24px;
            margin-bottom: 46px;

            @include mq('lg') {
                width: percentage(775/960);
                margin-left: auto;
                margin-right: auto;
            }
        }

        h2.heading--2 {
            margin-bottom: 20px;

            &.top {
                margin-top:16px;
            }
        }
    }

    .section--factors {
        background: #252F39;//303A44;
    }

    @include mq("lg", "md") {

        .section--theories {

            .row {
                margin: 0 auto;

                &.brain { 
                    .icon {
                        left: 0;                    
                    }
                }
                &.neuron {
                    .icon {
                        right: -26px;
                    }
                }
                &.neuron-closeup {
                    .icon {
                        left: 0;
                    }
                }
            }
        }

        .section--factors {

            .wrap--content {
                padding-top: 22px;
            }

            .heading--1 {
                margin-bottom: 49px;
            }

            .heading--2 {
                margin-bottom: 20px;
            }

            .row {
                margin: 0 auto;
            }
            .dna {
                .icon {
                    left: -32px;
                }
            }
            .people {
                .icon {
                    right: 0;
                }
            }
        }

        .wrap--refs {
            width: 612px;
        }

    }


    @include mq("lg") {
    
        .heading--4 {
            margin-bottom:10px;
        }
        .section--theories {

            .row {
                width: 700px;
                padding: 30px 0 30px 140px;

                
            }
            .brain {
                padding-top: 40px;
                padding-bottom: 10px;

                
            }

            .neuron {
                margin-top: 20px;
                padding-right: 140px;

                .icon {
                    position: absolute;
                    top: 50%;
                    margin-top: -106px;
                }
            }
        }

        .section--factors {
            
            .row {
                width: 700px;
                padding: 30px 0;

                &.dna {
                    padding-left: 170px;

                    ul li{
                        padding-top: 6px;
                        padding-bottom: 6px;
                    }


                }
                &.people {
                    padding-top: 58px;
                    padding-right: 240px;
                }
            }

            p.footnote{
                padding-top: 0px;
                width: 656px;
                text-align: center;
            }
        }
    }

    @include mq("md") {

        .section--theories {

            .row {
                width: percentage(618/768);
                padding: 30px 0 30px 140px;

                &.neuron {
                    padding-right: 140px;
                }
            }
        }

        .section--factors {

            .row {
                width: percentage(598/768);
                padding: 30px 0;

                &.dna {
                    padding-left: 150px;
                }
                &.people {
                    padding-right: 180px;
                }
            }
        }
    }

    // NOTE: this section has too many !importants, use specificity to override css attributes ┻━┻︵ \(°□°)/ ︵ ┻━┻
    @include mq("sm") {

        .row p{
            letter-spacing: 0.3px;
        }

        .phoneStyle {
            display: none;
        }

        .mobileContspace {
            margin-top: 48px;
        }
        
        .icon {
            margin: 20px auto !important;
            position: relative;
            top: auto;
            left: auto;
        }
        
        .is--vc {
            margin-top: 44px !important;
        }

        .mobileHeading--4 {
            font-size: 19px !important;
            line-height: 23px;
        }

        .mobileP--1 {
            width: 256px !important;
            font-size: 16px;
            margin-top: 9px;
            text-align: center;
            color: #ADB2B6;
            line-height: 20px !important;
            margin-left: 5px !important;
            
        }

        .is--nd {
            margin-top: 45px !important;
            margin-bottom: 25px !important;
        }

        .mobileHeading--5 {
            font-size: 19px !important;
            color: #E8E9E9;
            line-height: 23px;
            margin-bottom: 10px !important;
        }
        
        .mobileP--2 {
            font-size: 15.7px !important;
            color: #ADB2B6;
            line-height: 19px !important;
            // letter-spacing: 1.1px;
            margin-bottom: 53px;
            
        }
        
        .mobileHeading--6 {
            margin-top: 25px;
            margin-bottom: 10px;
            font-size: 16px;
            line-height: 18px;
        }
        
        // .mobileTitle {
        //     font-size: 26px !important;
        //     color: #FDBD3E !important;
        //     line-height: 36px;
        //     margin-top: 28px !important;
        //     font-style: normal !important;
        //     width: 246px;
        //     margin-left: auto;
        //     margin-right: auto;
        // }
        
        .listStyle {
            font-size: 16px !important;
            color: #ADB2B6 !important;
            line-height: 18px !important;
            margin-top: 12px;
            padding-top: 12px !important;
        }
        
        .mobileHeading--7 {
            font-size: 19px;
            color: #E8E9E9;
            line-height: 23px;
            font-weight: 100;
        }

        .footnote {
            margin-top: 30px;
            font-size: 12px !important;
            color: #858B91 !important;
            line-height: 14px;
            text-align: left;
        }
        
        
        .center {
            margin-top: 36px;
        }
        p, h4 {
            text-align: center;
        }
        .section--factors {
            .btn{
                font-size: 14px;
                // line-height: 17px;
            }
        }
    }
}

